# ATM-Bank-Studying

./: BankOfAmerica.pro  CMakeLists.txt  README.md  main.cpp  optionsaccounts.cpp  personaccount.h
Interface/: BankOfAmerica.pro  accountvector.cpp  accountvector.h  infoaccount.cpp  infoaccount.h  infoaccount.ui  interface.cpp  interface.h  interface.ui  interfacebank.cpp  interfacebank.h  interfacebank.ui  main.cpp  openaccount.cpp  openaccount.h  openaccount.ui  optionsaccount.cpp  optionsaccount.h  personaccount.h  showaccounts.cpp  showaccounts.h  showaccounts.ui  widget.cpp  widget.h
NoInterface/: CMakeLists.txt  interface.ui  optionsaccount.cpp  optionsaccount.h
